# tauri

./: README.md  package.json
src/: index.html  tauri-plugin-htmx.js
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
