[package]
name = "tauri-htmx-js"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.2"
tokio = { version = "1.39.2", features = ["full"] }
#rusqlite= "0.32.1"
rand = "0.8.5"
r2d2_sqlite = "0.25.0"
r2d2 = "0.8.10"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
